intel/bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/log.txt
bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main.c:37:11: error: assigning to 'enum (anonymous enum at bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main.c:30:5)' from incompatible type 'int'
    fmt = 0;
          ^
2 errors generated.
HLS FPGA Parse FAILED.
